--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "moment": "^2.19.1",
     "prop-types": "^15.6.0",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-infinite": "^0.12.1",
+    "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
@@ -15,5 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-addons-perf": "^15.4.2",
+    "react-perf-tool": "^0.2.2"
   }
 }
